travis: Enable irc notifications
And disable the default notifications per e-mail.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ install:
   - sudo pip install pep8
 script:
   - pep8 . --ignore=E501
+notifications:
+  email: false
+  irc:
+    channels:
+      - "chat.freenode.net#countervandalism"
+    template:
+      - "%{repository}#%{build_number} (%{branch} - %{commit}: %{author}) %{message} - %{build_url}"
