build: Use Travis CI containers
Faster than the default sudo-enabled VMs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
+sudo: false
 language: python
 python:
   - "2.7"
 install:
-  - sudo pip install pep8
+  - pip install pep8
 script:
+  # E501: line too long
   - pep8 . --ignore=E501
 notifications:
   email: false
