--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: python
 python:
   - "2.7"
 install:
-  - pip install pep8
+  - pip install pycodestyle
 script:
   # E501: line too long
-  - pep8 . --ignore=E501
+  - pycodestyle . --ignore=E501
 notifications:
   email: false
   irc:
