--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ notifications:
   email: false
   irc:
     channels:
-      - "chat.freenode.net#countervandalism"
+      - "irc.libera.chat#countervandalism"
     template:
       - "%{repository}#%{build_number} (%{branch} - %{commit}: %{author}) %{message} - %{build_url}"
